update a5 prob2
update a5 prob2