@@ -26,6 +26,9 @@ public class BagOfWordsTest {
     assertTrue(tedBag.isEmpty());
   }
 
+  /**
+   * Test size() method, also test add and remove related methods
+   */
   @Test
   public void size() {
     assertEquals(0, tedBag.size());
@@ -36,25 +39,44 @@ public class BagOfWordsTest {
     tedBag.add("Java");
     assertEquals(3, tedBag.size());
 
+    // also test the remove related method
+    tedBag.removeLast();
+    assertEquals(2, tedBag.size());
+    tedBag.removeFirst();
+    assertEquals(1, tedBag.size());
+    tedBag.remove(0);
+    assertEquals(0, tedBag.size());
+
   }
 
+  /**
+   * Test different add related methods,
+   * also test get related methods.
+   */
   @Test
   public void add() {
     tedBag.add("I");
     assertEquals("I", tedBag.getLast());
-    tedBag.add("love");
-    assertEquals("love", tedBag.getFirst());
-    tedBag.add("Java");
-    assertEquals("Java", tedBag.get(0));
+    tedBag.add(1,"love");
+    assertEquals("love", tedBag.get(1));
+    tedBag.addFirst("Java");
+    assertEquals("Java", tedBag.getFirst());
+    tedBag.addLast("Do");
+    assertEquals("Do", tedBag.getLast());
+    
   }
 
+  /**
+   * Test contains() method, also test the constructor.
+   */
   @Test
   public void contains() {
-    tedBag.add("I");
-    tedBag.add("love");
-    tedBag.add("Java");
+    BagOfWords testBag = new BagOfWords(new String[]{"I","love","Java"});
+    assertTrue(testBag.contains("Java"));
+    assertTrue(testBag.contains("love"));
+    assertTrue(testBag.contains("I"));
+    assertFalse(testBag.contains("you"));
 
-    assertTrue(tedBag.contains("I"));
-    assertFalse(tedBag.contains("Python"));
   }
+
 }
